Group: current SVN version
Resolution: Fixed
Category: Game engine
If you run this example file and press P and space, you will see that the specular is changing when we rotate the camera.
The reason can be read here: http://gregs-blog.com/2007/12/21/theres-nothing-wrong-with-opengls-specular-lighting/
It's basically the lack of this call:
glLightModeli(GL_LIGHT_MODEL_LOCAL_VIEWER, GL_TRUE);
I hope this can be discussed in bf-comitters or here. But for now I will keep this short like that :)