source/gameengine/Rasterizer/RAS_OpenGLRasterizer/RAS_OpenGLRasterizer.h
@@ -80,6 +80,7 @@ class RAS_OpenGLRasterizer : public RAS_IRasterizer
 	MT_Matrix4x4	m_viewmatrix;
 	MT_Matrix4x4	m_viewinvmatrix;
 	MT_Point3		m_campos;
+	bool			m_camortho;
 
 	StereoMode		m_stereomode;
 	StereoEye		m_curreye;
@@ -168,6 +169,7 @@ public:
 					);
 
 	virtual const	MT_Point3& GetCameraPosition();
+	virtual bool	GetCameraOrtho();
 	
 	virtual void	SetFog(
 						float start,
